--- a/annoyances.html
+++ b/annoyances.html
@@ -3,23 +3,23 @@
 	<!-- Meta data is information that isn't seen -->
 	<!-- Almost every tag needs an open and a close -->
 	<head>
-		<title>Chris Hainzl | Home</title>
+		<title>Annoyances</title>
 	</head>
 
-	<body bgcolor = "yellow">
+	<body bgcolor = "black">
 	<table border = "3" bgcolor = "orange">
 		<tr>
 			<td colspan = "4"> MY Q&A </td>
 		</tr>
-	<center><img src="images/BacktoSchool.png"></center>
 <tr>
 	<td><a href="index.html">About Me</a></td>
 	<td ><a href="products.html">Interests</a></td>
 	<td><a href = "annoyances.html">Annoyances</a></td>
 </tr>
 <tr>
-	<td colspan = "4"> My name is Chris Hainzl. I am 17 years old and currently in my senior year of high school. Right now, I am looking to major in either computer science or accounting once I graduate.</td>
+	<td colspan = "4">Some things that really annoy me are loud noises, bees, wasps, and the smell of the school bathrooms.</td>
 </tr>
 </table>
+<img width = "100px" height="100px" src = "images/AngryEmoji.png">
 </body>
 </html>
