--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 	<td><a href = "annoyances.html">Annoyances</a></td>
 </tr>
 <tr>
-	<td colspan = "4"> My name is Chris Hainzl. I am 17 years old and currently in my senior year of high school. Right now, I am looking to major in either computer science or accounting once I graduate.</td>
+	<td colspan = "4"> My name is Chris Hainzl. I am 17 years old and currently attending Vernon Township High School, where I'm in my senior year.<br> Right now, I am looking to major in either computer science or accounting once I graduate.</td>
 </tr>
 </table>
+<img width = "300px" height = "300px" src = "images/VTSDLOGO.png">
 </body>
 </html>
