Last few changes (hopefully)

--- a/annoyances.html
+++ b/annoyances.html
@@ -11,13 +11,19 @@
 		<tr>
 			<td colspan = "4"> MY Q&A </td>
 		</tr>
+	<center><img src="images/BacktoSchool.png"></center>
 <tr>
 	<td><a href="index.html">About Me</a></td>
 	<td ><a href="products.html">Interests</a></td>
 	<td><a href = "annoyances.html">Annoyances</a></td>
 </tr>
 <tr>
-	<td colspan = "4">Some things that really annoy me are loud noises, bees, wasps, and the smell of the school bathrooms.</td>
+	<td colspan = "4">Some things that really annoy me are loud noises, bees, wasps, and the smell of the school bathrooms.
+		<img height = "200px" width = "200px" src = "images/AnnoyedPerson.png">
+		<img height = "200px" width = "200px" src = "images/Wasp.png">
+		<img height = "200px" width = "200px" src = "images/Bees.png">
+		<img height = "200px" width = "200px" src = "images/SchoolBathroom.png">
+	</td>
 </tr>
 </table>
 <img width = "100px" height="100px" src = "images/AngryEmoji.png">
