--- a/products.html
+++ b/products.html
@@ -3,12 +3,12 @@
 		<title>Interests</title>
 	</head>
 
-	<body bgcolor = "white">
-	<table border = "3" bgcolor = "orange">
+	<body bgcolor = "orange">
+	<table border = "3" bgcolor = "white">
 		<tr>
 			<td colspan = "3"> MY Q&A </td>
 		</tr>
-	<center><img src="images/Interests.png"></center>
+	<center><img src="images/BacktoSchool.png"></center>
 <tr>
 	<td><a href="index.html">About Me</a></td>
 	<td ><a href="products.html">Interests</a></td>
@@ -16,10 +16,10 @@
 </tr>
 <tr>
 	<td colspan = "3">
-- Nintendo Switch<br>
-- Computers<br>
-- New York Giants<br>
-- New York Yankees<br>
+- Nintendo Switch 	<img height = "200px" width = "200px" src = "images/NintendoSwitch.png"><br>
+- Computers<img height = "200px" width = "200px" src = "images/WindowsComputer.png"><br>
+- New York Giants<img height = "200px" width = "200px" src = "images/GiantsLogo.png"><br>
+- New York Yankees<img height = "200px" width = "200px" src = "images/YankeesLogo.png"><br>
 	</td>
 </tr>
 </table>
