Really my last few changes

--- a/annoyances.html
+++ b/annoyances.html
@@ -1,7 +1,4 @@
 <html>
-	<!-- The head of a page is for "meta" data -->
-	<!-- Meta data is information that isn't seen -->
-	<!-- Almost every tag needs an open and a close -->
 	<head>
 		<title>Annoyances</title>
 	</head>
@@ -9,7 +6,7 @@
 	<body bgcolor = "black">
 	<table border = "3" bgcolor = "orange">
 		<tr>
-			<td colspan = "4"> MY Q&A </td>
+			<td colspan = "4"> Annoyances </td>
 		</tr>
 	<center><img src="images/BacktoSchool.png"></center>
 <tr>
@@ -27,5 +24,8 @@
 </tr>
 </table>
 <img width = "100px" height="100px" src = "images/AngryEmoji.png">
+<font color = "yellow">
+	Copyright 2019. All rights reserved.
+</font>
 </body>
 </html>
