--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <html>
-	<!-- The head of a page is for "meta" data -->
-	<!-- Meta data is information that isn't seen -->
-	<!-- Almost every tag needs an open and a close -->
 	<head>
 		<title>Chris Hainzl | Home</title>
 	</head>
@@ -9,7 +6,7 @@
 	<body bgcolor = "yellow">
 	<table border = "3" bgcolor = "orange">
 		<tr>
-			<td colspan = "4"> MY Q&A </td>
+			<td colspan = "4"> About Me </td>
 		</tr>
 	<center><img src="images/BacktoSchool.png"></center>
 <tr>
@@ -22,5 +19,10 @@
 </tr>
 </table>
 <img width = "300px" height = "300px" src = "images/VTSDLOGO.png">
+
+
+
+	Copyright 2019. All rights reserved.
+
 </body>
 </html>
