--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
 	<body bgcolor = "orange">
 	<table border = "3" bgcolor = "white">
 		<tr>
-			<td colspan = "3"> MY Q&A </td>
+			<td colspan = "3"> Interests </td>
 		</tr>
 	<center><img src="images/BacktoSchool.png"></center>
 <tr>
@@ -24,5 +24,10 @@
 </tr>
 </table>
 <img width="100px" height="100px" src= "images/HappyEmoji.png">
+
+
+
+	Copyright 2019. All rights reserved.
+
 </body>
 </html>
