--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8">
 		<title>Chris Hainzl | Home</title>
 	</head>
 
 	<body bgcolor = "yellow">
 	<table border = "3" bgcolor = "orange">
 		<tr>
-			<td colspan = "4"> About Me </td>
+			<td colspan="3"><center><img src="images/BacktoSchool.png" alt="Banner"></center></td>
 		</tr>
-	<center><img src="images/BacktoSchool.png"></center>
 <tr>
 	<td><a href="index.html">About Me</a></td>
 	<td ><a href="products.html">Interests</a></td>
 	<td><a href = "annoyances.html">Annoyances</a></td>
 </tr>
 <tr>
-	<td colspan = "4"> My name is Chris Hainzl. I am 17 years old and currently attending Vernon Township High School, where I'm in my senior year.<br> Right now, I am looking to major in either computer science or accounting once I graduate.</td>
+	<td colspan = "3"> My name is Chris Hainzl. I am 17 years old and currently attending Vernon Township High School, where I'm in my senior year.<br> Right now, I am looking to major in either computer science or accounting once I graduate.</td>
 </tr>
 </table>
-<img width = "300px" height = "300px" src = "images/VTSDLOGO.png">
+<img width = "300" height = "300" src = "images/VTSDLOGO.png" alt = "Copyright Logo">
 
 
 
