Changes to the format/layout

--- a/annoyances.html
+++ b/annoyances.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Annoyances</title>
-	</head>
 
-	<body bgcolor = "black">
-	<table border = "3" bgcolor = "orange">
+<head>
+	<meta charset="utf-8">
+	<title>Annoyances</title>
+</head>
+
+<body bgcolor="black">
+	<table border="3" bgcolor="orange">
 		<tr>
-			<td colspan = "3"><center><img src="images/BacktoSchool.png" alt = "Banner"></center></td>
+			<td colspan="3">
+				<center><img src="images/BacktoSchool.png" alt="Banner"></center>
+			</td>
 		</tr>
-<tr>
-	<td><a href="index.html">About Me</a></td>
-	<td><a href="products.html">Interests</a></td>
-	<td><a href = "annoyances.html">Annoyances</a></td>
-</tr>
-<tr>
-	<td colspan = "3">Some things that really annoy me are loud noises, bees, wasps, and the smell of the school bathrooms.
-		<img height = "200" width = "200" src = "images/AnnoyedPerson.png" alt = "Person Image">
-		<img height = "200" width = "200" src = "images/Wasp.png" alt = "Insect Image">
-		<img height = "200" width = "200" src = "images/Bees.png" alt = "Another Insect Image">
-		<img height = "200" width = "200" src = "images/SchoolBathroom.png" alt = "Bathroom Image">
-	</td>
-</tr>
-</table>
-<img width = "100" height="100" src = "images/AngryEmoji.png" alt = "Yellow Face">
-<font color = "yellow">
-	Copyright 2019. All rights reserved.
-</font>
+		<tr>
+			<td><a href="index.html">About Me</a></td>
+			<td><a href="products.html">Interests</a></td>
+			<td><a href="annoyances.html">Annoyances</a></td>
+		</tr>
+		<tr>
+			<td colspan="3">Some things that really annoy me are loud noises, bees, wasps, and the smell of the school bathrooms.
+				<img height="200" width="200" src="images/AnnoyedPerson.png" alt="Person Image">
+				<img height="200" width="200" src="images/Wasp.png" alt="Insect Image">
+				<img height="200" width="200" src="images/Bees.png" alt="Another Insect Image">
+				<img height="200" width="200" src="images/SchoolBathroom.png" alt="Bathroom Image">
+			</td>
+		</tr>
+	</table>
+	<img width="100" height="100" src="images/AngryEmoji.png" alt="Yellow Face">
+	<font color="yellow">
+		Copyright 2019. All rights reserved.
+	</font>
 </body>
+
 </html>
