--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Chris Hainzl | Home</title>
-	</head>
 
-	<body bgcolor = "yellow">
-	<table border = "3" bgcolor = "orange">
+<head>
+	<meta charset="utf-8">
+	<title>Chris Hainzl | Home</title>
+</head>
+
+<body bgcolor="yellow">
+	<table border="3" bgcolor="orange">
 		<tr>
-			<td colspan="3"><center><img src="images/BacktoSchool.png" alt="Banner"></center></td>
+			<td colspan="3">
+				<center><img src="images/BacktoSchool.png" alt="Banner"></center>
+			</td>
 		</tr>
-<tr>
-	<td><a href="index.html">About Me</a></td>
-	<td><a href="products.html">Interests</a></td>
-	<td><a href = "annoyances.html">Annoyances</a></td>
-</tr>
-<tr>
-	<td colspan = "3"> My name is Chris Hainzl. I am 17 years old and currently attending Vernon Township High School, where I'm in my senior year.<br> Right now, I am looking to major in either computer science or accounting once I graduate.</td>
-</tr>
-</table>
-<img width = "300" height = "300" src = "images/VTSDLOGO.png" alt = "Copyright Logo">
+		<tr>
+			<td><a href="index.html">About Me</a></td>
+			<td><a href="products.html">Interests</a></td>
+			<td><a href="annoyances.html">Annoyances</a></td>
+		</tr>
+		<tr>
+			<td colspan="3"> My name is Chris Hainzl. I am 17 years old and currently attending Vernon Township High School, where I'm in my senior year.<br> Right now, I am looking to major in either computer science or accounting once I graduate.</td>
+		</tr>
+	</table>
+	<img width="300" height="300" src="images/VTSDLOGO.png" alt="Copyright Logo">
 
 
 
 	Copyright 2019. All rights reserved.
 
 </body>
+
 </html>
