--- a/products.html
+++ b/products.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Interests</title>
-	</head>
 
-	<body bgcolor = "orange">
-	<table border = "3" bgcolor = "white">
+<head>
+	<meta charset="utf-8">
+	<title>Interests</title>
+</head>
+
+<body bgcolor="orange">
+	<table border="3" bgcolor="white">
 		<tr>
-			<td colspan = "3">	<center><img src="images/BacktoSchool.png" alt="My Banner"></center></td>
+			<td colspan="3">
+				<center><img src="images/BacktoSchool.png" alt="My Banner"></center>
+			</td>
 		</tr>
-<tr>
-	<td><a href="index.html">About Me</a></td>
-	<td><a href="products.html">Interests</a></td>
-	<td><a href = "annoyances.html">Annoyances</a></td>
-</tr>
-<tr>
-	<td colspan = "3">
-- Nintendo Switch 	<img height = "200" width = "200" src = "images/NintendoSwitch.png" alt="Console Image"><br>
-- Computers<img height = "200" width = "200" src = "images/WindowsComputer.png" alt = "Computer Image"><br>
-- New York Giants<img height = "200" width = "200" src = "images/GiantsLogo.png" alt = "Football Logo"><br>
-- New York Yankees<img height = "200" width = "200" src = "images/YankeesLogo.png" alt = "Baseball Logo"><br>
-	</td>
-</tr>
-</table>
-<img width="100" height="100" src= "images/HappyEmoji.png" alt = "Happy Yellow Face">
+		<tr>
+			<td><a href="index.html">About Me</a></td>
+			<td><a href="products.html">Interests</a></td>
+			<td><a href="annoyances.html">Annoyances</a></td>
+		</tr>
+		<tr>
+			<td colspan="3">
+				- Nintendo Switch <img height="200" width="200" src="images/NintendoSwitch.png" alt="Console Image"><br>
+				- Computers<img height="200" width="200" src="images/WindowsComputer.png" alt="Computer Image"><br>
+				- New York Giants<img height="200" width="200" src="images/GiantsLogo.png" alt="Football Logo"><br>
+				- New York Yankees<img height="200" width="200" src="images/YankeesLogo.png" alt="Baseball Logo"><br>
+			</td>
+		</tr>
+	</table>
+	<img width="100" height="100" src="images/HappyEmoji.png" alt="Happy Yellow Face">
 
 
 
 	Copyright 2019. All rights reserved.
 
 </body>
+
 </html>
